Further fixes for scaling tables to terminal width.
*) No more tables with maxWidth 0 -> now default to MIN_MAX_TABLE_LENGTH
*) Column shortening is now right-to-left
*) ALL text tables now respect the terminal width
*) Table indentation is now considered when calculation text table width
*) Argument-column of ToolBase#helpAndFail was set to scale with content

Request: CT_BDEPLOY-175
Change-Id: Ib35ab1fa208d4e70aa61d81eb5aa367e9329233a